[tool.poetry]
name = "custom-audio-broadcaster-client"
version = "0.1.0"
description = "Custom Audio Broadcaster Client"
authors = ["seb0xff <contact.git@seb0xff.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygobject = "^3.46.0"
aiohttp = "^3.9.1"
aiodns = "^3.1.1"
pygobject-stubs = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
